--- a/boton-y-led/Makefile
+++ b/boton-y-led/Makefile
@@ -3,10 +3,10 @@ all:
 	avr-gcc -mmcu=atmega328p led.o -o led.elf
 	avr-objcopy -O ihex -R .eeprom led.elf led.hex
 
-exe1:
-	sudo avrdude -v -v -v -v -p atmega328p -c arduino -P /dev/ttyUSB0 -b 115200 -D -U flash:w:led.hex:i
+#flash-opt:
+#	sudo avrdude -v -v -v -v -p atmega328p -c arduino -P /dev/ttyUSB0 -b 115200 -D -U flash:w:led.hex:i
 
-exe2:
+flash:
 	sudo avrdude -v -v -v -v -p atmega328p -c arduino -P /dev/ttyACM0 -b 115200 -D -U flash:w:led.hex:i
 	
 clean:
