updates on serial

--- a/serial/Makefile
+++ b/serial/Makefile
@@ -16,7 +16,7 @@ TTY=/dev/ttyACM0
 
 all: $(APP)
 	make flash
-	make screen-read
+	make screen
 
 $(APP): $(OBJETOS)
 	$(CC) $(LDFLAGS) -o $@ $^ 
@@ -31,8 +31,7 @@ flash:
 	avr-objcopy -O ihex -R .eeprom $(APP) $(FIRMWARE)
 	sudo avrdude -p atmega328p -c arduino -P $(TTY) -b 115200 -D -U flash:w:$(FIRMWARE):i F_CPU 16000000
 
-
-screen-read:
+screen:
 	screen $(TTY) 9600
 
 cat-read:
@@ -43,5 +42,3 @@ test-put:
 	sudo stty -F $(TTY) speed 9600
 	sudo echo 'l' >> $(TTY)
 	
-screen-put:
-	screen -r "tty-screen" 
