--- a/proyecto-final/test/Makefile
+++ b/proyecto-final/test/Makefile
@@ -1,14 +1,32 @@
+CC=avr-gcc
+OBJETOS=main.o sleep.o eeprom.o serial.o
+APP=serial
+CFLAGS=-Os -DF_CPU=16000000UL -mmcu=atmega328p 
+LDFLAGS=-mmcu=atmega328p
+FIRMWARE=imagen.hex
 TTY=/dev/ttyACM0
-#TTY=/dev/ttyUSB0
+# TTY=/dev/ttyUSB0
 
-all:
-	avr-gcc -c -o sleep.o sleep.c
-	avr-gcc -Os -DF_CPU=16000000UL -mmcu=atmega328p -c -o main.o main.c
-	avr-gcc -mmcu=atmega328p main.o -o main.elf sleep.o
-	avr-objcopy -O ihex -R .eeprom main.elf main.hex
+# $@:Se sustituye por el nombre del objetivo de la presente regla.
+# $*:Se sustituye por la raíz de un nombre de fichero.
+# $<:Se sustituye por la primera dependencia de la presente regla.
+# $^:Se sustituye por una lista separada por espacios de cada una de las dependencias de la presente regla.
+
+# F_CPU es el valor que se debe reemplazar en el fuente del serial
+
+all: $(APP)
+	make flash
+
+$(APP): $(OBJETOS)
+	$(CC) $(LDFLAGS) -o $@ $^ 
+
+%.o: %.c
+	$(CC) $(CFLAGS) -o $@ -c $<
 
 flash:
-	sudo avrdude -v -v -v -v -p atmega328p -c arduino -P $(TTY) -b 115200 -D -U flash:w:main.hex:i
-	
+	avr-objcopy -O ihex -R .eeprom $(APP) $(FIRMWARE)
+	sudo avrdude -p atmega328p -c arduino -P $(TTY) -b 115200 -D -U flash:w:$(FIRMWARE):i F_CPU 16000000
+
 clean:
-	rm main.elf led.hex main.o sleep.o
+	rm $(APP) $(FIRMWARE) $(OBJETOS)
+	
